# GB-Sprite-Codec

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: sprite.h
src/: CMakeLists.txt  main.c  sprite.c
test/: CMakeLists.txt  sprite_test.c
